<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.kbhkn.takvimuygulamasi.HatirlaticiKur">

    <TextView
        android:id="@+id/txtBaslikNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBaslik"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#121efb" />

    <TextView
        android:id="@+id/ptxtAlarmBaslik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtAlarmNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txtAlarm"
        android:inputType="text" />

    <TextView
        android:id="@+id/ptxtAlarmNot"
        android:layout_width="fill_parent"
        android:layout_height="158dp"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTarihSec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Tarihi Seçiniz"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSaatSec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.99"
            android:gravity="center"
            android:text="Saati Seçiniz"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTarihAyarla"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnTarih"
            android:onClick="setTarih" />

        <Button
            android:id="@+id/btnSaatAyarla"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSaat"
            android:onClick="setSaat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAlarmKur"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnAlarm"
            />

        <Button
            android:id="@+id/btnIptalEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnIptal"
            />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frameha"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false"
            android:orientation="vertical"
            android:padding="10dp">
        </ScrollView>
    </FrameLayout>
</LinearLayout>

